# cuda-study

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cuda_gemm.cu
chapter03/: CMakeLists.txt  nestedHelloWorldLimited.cpp  nestedHelloWorldLimited.cu  reduceInteger.cpp  reduceInteger.cu  simpleDivergence.cpp  simpleDivergence.cu  sumMatrix.cpp  sumMatrix.cu
chapter04/: CMakeLists.txt  globalVariable.cpp  memTransfer.cpp  pinMemTransfer.cpp  readSegment.cpp  readSegment.cu  readSegmentUnroll.cpp  simpleMathAoS.cpp  simpleMathSoA.cpp  sumArrayZerocpy.cpp  sumArrayZerocpy.cu  transpose.cpp  writeSegment.cpp
cuda-utils/: CMakeLists.txt  divergence.cu
include/: cuda_utils.h
matrix-multiply/: CMakeLists.txt  compare_blas.cpp
simple/: CMakeLists.txt  async_api.cpp  async_api.cu  hello.cpp  hello.cu
src/chapter03/: CMakeLists.txt  reduceInteger.cpp
src/chapter04/: CMakeLists.txt  globalVariable.cpp  memTransfer.cpp  pinMemTransfer.cpp  readSegmentUnroll.cpp  simpleMathAoS.cpp  simpleMathSoA.cpp  transpose.cpp  writeSegment.cpp
src/cuda-lib/: CMakeLists.txt  interfaces.cu  interfaces.sass  matmul_cpu.cu  matmul_cutlass.cu  matmul_kernel.cu  matmul_kernel_block_64x64.cu  matmul_tensor_core.cu  matmul_yhs.cu  matmul_yhs_my_opt.cu  matmul_yhs_my_opt.sass  matmul_yhs_my_opt_sm_reg_no_ffma.sass  nvcc_cmd.sh  test_texture_kernel.cu
src/cuda-lib/interfaces.cu.obj/: interfaces.cudafe1.c  interfaces.cudafe1.gpu  interfaces.cudafe1.stub.c  interfaces.fatbin  interfaces.fatbin.c  interfaces.module_id  interfaces.o.ptx  interfaces.ptx  interfaces.sm_75.cubin  interfaces.sm_75.cubin.sass
src/cuda-lib/kernels.cu.obj/: kernels.cpp1.ii  kernels.cpp4.ii  kernels.cudafe1.c  kernels.cudafe1.cpp  kernels.cudafe1.gpu  kernels.cudafe1.stub.c  kernels.fatbin  kernels.fatbin.c  kernels.module_id  kernels.o.ptx  kernels.o.sass  kernels.ptx  kernels.sm_75.cubin  kernels.sm_75.sm_75.cubin.sass
src/cuda-matmul/: CMakeLists.txt  clk_8x32x16HHF_RR.cpp  cuda_matmul2.cpp  turing_tensorop_gemm.cpp
src/cuda-matmul/cudaTensorCoreGemm.cu.obj/: cudaTensorCoreGemm.cpp1.ii  cudaTensorCoreGemm.cpp4.ii  cudaTensorCoreGemm.cudafe1.c  cudaTensorCoreGemm.cudafe1.cpp  cudaTensorCoreGemm.cudafe1.gpu  cudaTensorCoreGemm.cudafe1.stub.c  cudaTensorCoreGemm.fatbin  cudaTensorCoreGemm.fatbin.c  cudaTensorCoreGemm.module_id  cudaTensorCoreGemm.o.ptx  cudaTensorCoreGemm.ptx  cudaTensorCoreGemm.sm_75.cubin  cudaTensorCoreGemm.sm_75.cubin.sass
src/cuda-matmul/temp.obj/: clk_8x32x16HHF_RR  clk_8x32x16HHF_RR.cpp1.ii  clk_8x32x16HHF_RR.cpp4.ii  clk_8x32x16HHF_RR.cudafe1.c  clk_8x32x16HHF_RR.cudafe1.cpp  clk_8x32x16HHF_RR.cudafe1.gpu  clk_8x32x16HHF_RR.cudafe1.stub.c  clk_8x32x16HHF_RR.fatbin  clk_8x32x16HHF_RR.fatbin.c  clk_8x32x16HHF_RR.module_id  clk_8x32x16HHF_RR.ptx  clk_8x32x16HHF_RR.sass  clk_8x32x16HHF_RR.sm_75.cubin  clk_8x32x16HHF_RR_dlink.fatbin  clk_8x32x16HHF_RR_dlink.fatbin.c  clk_8x32x16HHF_RR_dlink.sm_75.cubin  test_clock.sh
src/cuda-texture/: cuda_texture_test1.cpp  cuda_texture_test_1D.cpp
src/cuda-utils/: CMakeLists.txt  divergence.cpp
src/gpu-memory/: CMakeLists.txt  shared_memory_test.cpp
src/gpu-memory/gpu-memory-kernel/: CMakeLists.txt  shared_memory_kernel.cu  shared_memory_kernel.ptx  shared_memory_kernel.sass  shared_memory_kernel_4.ptx  shared_memory_kernel_4.sass  shared_memory_kernel_asm  shared_memory_kernel_asm.ptx  shared_memory_kernel_asm.sass
src/gpu_matrixmul_cuda/: CMakeLists.txt  Makefile  matrixMul.cu  matrixMul.h  matrix_mul_main.cpp
src/include/: common_function.h  cuda_utils.h  cute  cutlass  interfaces.h  kernels.h  matmul_kernel.h  prof.h  tree.h  utils.h
src/include/cutlass-2.9.1/gemm/threadblock/: mma_pipelined.h
src/include/cutlass-2.9.1/gemm/warp/: mma_simt_tile_iterator.h
src/matrix-multiply/: CMakeLists.txt  compare_blas.cpp
src/simple/: CMakeLists.txt  async_api.cpp  hello.cpp
src/sparse-fipnn/: CMakeLists.txt  sparse_fipnn_multi_example_test.cpp  sparse_fipnn_multi_example_test_v2.cpp  sparse_fipnn_test.cpp
src/sparse-fipnn/sparse-fipnn-kernel/: CMakeLists.txt  sparse_fipnn_kernel.cu  sparse_fipnn_shared_memory_kernel.cu.no_map_idx  sparse_fipnn_shared_memory_kernel.cu.v1  sparse_fipnn_shared_memory_kernel.cu.v2  sparse_fipnn_shared_memory_kernel.cu.v3_error  sparse_fipnn_shared_memory_kernel.cu.v4_reduce_mul  sparse_fipnn_shared_memory_kernel.cu.v4_reduce_mul.asm  sparse_fipnn_shared_memory_kernel_multi_example.cu  sparse_fipnn_shared_memory_kernel_multi_example_v2.cpp  sparse_fipnn_shared_memory_kernel_multi_example_v2.cu  sparse_fipnn_shared_memory_kernel_v5_new_output.cpp  sparse_fipnn_shared_memory_kernel_v6_loadv4_err.cpp  sparse_fipnn_shared_memory_kernel_v7.cpp
src/sparse-fwffm/: CMakeLists.txt  sparse_fwffm_test.cpp  sparse_fwffm_test2.cpp
src/sparse-fwffm/sparse-fwffm-kernel/: sparse_fwffm_kernel.cu  sparse_fwffm_kernel.cu.cpy  sparse_fwffm_shared_memory_kernel.cu  sparse_fwffm_shared_memory_kernel.cu.cannot_impl  sparse_fwffm_shared_memory_kernel.cu.cpy  sparse_fwffm_shared_memory_kernel.cu.ori  sparse_fwffm_shared_memory_kernel.cu.v1  sparse_fwffm_shared_memory_kernel.cu.v2  sparse_fwffm_shared_memory_kernel.cu.v3  sparse_fwffm_shared_memory_kernel.cu.v4  sparse_fwffm_shared_memory_kernel.cu.v5_no_cudamemset  sparse_fwffm_shared_memory_kernel.cu.v6
src/sse-study/: CMakeLists.txt  sse_integer_add.cpp
src/utilities/: CMakeLists.txt  a100_get_peak.cpp  device_query.cpp  t4_get_peak.cpp
src/utils/: CMakeLists.txt  common_function.cpp
sse-study/: CMakeLists.txt  compute_pi.cpp  measure_cpu.cpp  string_match.cpp  test.S
use-cudalib/: CMakeLists.txt  simpleDivergence.cpp
utilities/: CMakeLists.txt  device_query_drv.cpp
