cmake_minimum_required(VERSION 2.8)

project(cuda-study C CXX)

include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
if(COMPILER_SUPPORTS_CXX11)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
    message("Have set c++11.")
elseif(COMPILER_SUPPORTS_CXX0X)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
    message("Have set c++0x.")
else()
    message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
endif()

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse4")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx2")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfma")

foreach(val ${CMAKE_CXX_FLAGS})
    message(${val})
endforeach()

find_package(Threads REQUIRED)
message("Threads libs:")
foreach(val ${CMAKE_THREAD_LIBS_INIT})
    message(${val})
endforeach()
message("\n")
set(PROJECT_LINK_LIBS "")
list(APPEND PROJECT_LINK_LIBS ${CMAKE_THREAD_LIBS_INIT})
list(APPEND PROJECT_LINK_LIBS -lopenblas)

set(CUDA_PATH "/usr/local/cuda")
set(OpenBLAS_PATH "/home/yckj3211/workspace/OpenBLAS/install")
list(APPEND INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/include)
list(APPEND INCLUDE_DIRS ${CUDA_PATH}/include)
list(APPEND INCLUDE_DIRS ${OpenBLAS_PATH}/include)
list(APPEND LINK_DIRS ${CUDA_PATH}/lib64)
list(APPEND LINK_DIRS ${OpenBLAS_PATH}/lib)

include_directories(${INCLUDE_DIRS})
link_directories(${LINK_DIRS})
#add_subdirectory(cuda-utils)
#add_subdirectory(use-cudalib)
add_subdirectory(sse-study)
#add_subdirectory(utilities)
add_subdirectory(matrix-multiply)
add_subdirectory(simple)
add_subdirectory(chapter03)
add_subdirectory(chapter04)

